istio/3.traffic-management/echo-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-v1
  name: echo-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-v1
  template:
    metadata:
      labels:
        app: echo-v1
    spec:
      containers:
        - image: hashicorp/http-echo
          name: echo-v1
          args:
            - "-text=echo-v1"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  labels:
    app: echo-v1
spec:
  selector:
    app: echo-v1
  ports:
    - port: 5678
