istio/3.traffic-management/echo-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
  labels:
    app: echo-v2
spec:
  selector:
    matchLabels:
      app: echo-v2
  template:
    metadata:
      labels:
        app: echo-v2
    spec:
      containers:
        - name: echo-v2
          image: hashicorp/http-echo
          imagePullPolicy: IfNotPresent
          args:
            - "-text=echo-v2"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
  labels:
    app: echo-v2
spec:
  selector:
    app: echo-v2
  ports:
    - port: 5678
